# python-learning-skills

./: .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.json  README.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: config.yml  leccion-01.md  leccion-02.md  leccion-03.md  leccion-04.md  leccion-05.md  leccion-06.md  leccion-07.md
.github/workflows/: progreso.yml  revisar-pr.yml  validar-leccion.yml
lessons/01-intro/: instructions.md  solucion.py
lessons/02-variables/: instructions.md
lessons/03-conditionals/: instructions.md  solucion.py
lessons/04-loops/: instructions.md  solucion.py
lessons/05-functions/: instructions.md  solucion.py
lessons/06-final-project/: instructions.md  solucion.py
lessons/07-testing/: instructions.md  solucion.py
scripts/: generar_certificado.py
tests/: conftest.py  helpers.py  test_lesson_01.py  test_lesson_02.py  test_lesson_03.py  test_lesson_04.py  test_lesson_05.py  test_lesson_06.py  test_lesson_07.py
